--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ table {
     width: 700px;
     border-collapse: collapse;
     margin: auto;
+    position: relative;
 }
 
 thead, tfoot {
@@ -21,6 +22,19 @@ thead, tfoot {
     color: white;
 }
 
+thead > tr > th {
+    position: sticky;
+    top: -1px;
+    background-color: #008080;
+}
+
+tbody tr:nth-child(odd) { /* 2n-1 */
+    background-color: white;
+}
+
+tbody tr:nth-child(even) { /* 2n */
+    background-color: #ececf0;
+}
 td, th {
     border: 1px solid black;
     padding: 10px;
