--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+div#container {
+    overflow-x: auto;
+}
+
 caption {
     font-size: 2em;
     font-weight: bold;
